--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en-us">
 
      <head>
+         <meta charset="UTF-8">
         <title>Alice in Wonderland</title>
          <link href="https://fonts.googleapis.com/css2?family=Zen+Old+Mincho&display=swap" rel="stylesheet">
         <link href="style.css" rel="stylesheet"> 
